# RS_PDF

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  diesel.toml  main.rs  package-lock.json  tailwind.config.js
assets/: input.css  main.css  output.css  tailwind.css
src/: format.rs  lib.rs  main.rs
src/backend/: mod.rs
src/backend/controller/: mod.rs
src/backend/entity/: entity_bank.rs  entity_cash.rs  entity_cash_in.rs  entity_cash_out.rs  entity_credit.rs  entity_installment.rs  entity_label.rs  entity_payment.rs  entity_plan.rs  entity_plan_credit.rs  entity_revenue_type.rs  mod.rs
src/backend/model/: mod.rs  model_bank.rs  model_cash.rs  model_cash_in.rs  model_cash_out.rs  model_credit.rs  model_installment.rs  model_label.rs  model_payment_type.rs  model_pdf.rs  model_plan_credit.rs  model_revenue_type.rs
src/backend/repo/: db_connect.rs  mod.rs  schema.rs  setting_schema.rs
src/backend/service/: mod.rs
src/component/: create_label.rs  datepicker.rs  menu.rs  mod.rs  table.rs  upload.rs
src/component/com_date/: datepicker.rs  datepickermonth.rs  mod.rs
src/component/com_select/: mod.rs  (+1 more)
src/controller/: mod.rs
src/database/: db_delete.rs  db_insert.rs  db_select.rs  mod.rs  schema.rs
src/entity/: entity_bank.rs  entity_cash.rs  entity_credit.rs  entity_installment.rs  entity_label.rs  entity_payment.rs  entity_t1.rs  mod.rs
src/model/: mod.rs  model_pdf.rs
src/models/: mod.rs  model_label.rs  model_raw.rs
src/page/: mod.rs  pageLabel.rs  pageRaw.rs  pageUpload.rs  page_cash.rs  page_credit.rs  page_dashboad.rs  page_installment.rs  page_label.rs  page_t1.rs  page_upload.rs
src/repo/: db_connect.rs  mod.rs  schema.rs
src/service/: mod.rs
tests/: dashboard_cash_credit_test.rs
(+174 files in other folders)
